...
/* Class = "UILabel"; text = "How many glass of water have you drank today?"; ObjectID = "0aq-m8-2BZ"; */
"0aq-m8-2BZ.text" = "How many glass of water have you drank today?";

/* Class = "UIButton"; normalTitle = "Save"; ObjectID = "1Zg-0g-k2s"; */
"1Zg-0g-k2s.normalTitle" = "Save";

/* Class = "UILabel"; text = "Sunday"; ObjectID = "1lt-y8-c0M"; */
"1lt-y8-c0M.text" = "Sunday";

/* Class = "UINavigationItem"; title = "October 27th, 2017"; ObjectID = "21G-5H-tYI"; */
"21G-5H-tYI.title" = "October 27th, 2017";

/* Class = "UILabel"; text = "Activity"; ObjectID = "2W1-6d-BZO"; */
...
/* Class = "UILabel"; text = "If you would like to adjust your steps, enter the number below"; ObjectID = "3TE-Af-gFI"; */
"3TE-Af-gFI.text" = "If you would like to adjust your steps, enter the number below";

/* Class = "UIButton"; normalTitle = "Edit"; ObjectID = "3cg-Yk-z6P"; */
"3cg-Yk-z6P.normalTitle" = "Edit";

/* Class = "UILabel"; text = "Wed"; ObjectID = "3lz-0h-Jlc"; */
"3lz-0h-Jlc.text" = "Wed";

/* Class = "UIButton"; normalTitle = "28"; ObjectID = "4Uv-CP-Rkd"; */
"4Uv-CP-Rkd.normalTitle" = "28";

/* Class = "UILabel"; text = "How much sleep (in hours) did you get last night?"; ObjectID = "4zA-jJ-YkD"; */
...
/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "5PT-2p-rMs"; */
"5PT-2p-rMs.normalTitle" = "Cancel";

/* Class = "UILabel"; text = "Today's Steps"; ObjectID = "686-uh-ITD"; */
"686-uh-ITD.text" = "Today's Steps";

/* Class = "UILabel"; text = "Mon"; ObjectID = "6fF-49-LZj"; */
"6fF-49-LZj.text" = "Mon";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "7pe-De-6EA"; */
"7pe-De-6EA.normalTitle" = "Cancel";

/* Class = "UILabel"; text = "Blues"; ObjectID = "7sM-nE-bcc"; */
...
/* Class = "UILabel"; text = "Water"; ObjectID = "JkM-JY-G46"; */
"JkM-JY-G46.text" = "Water";

/* Class = "UILabel"; text = "Today's Mood"; ObjectID = "Kad-e9-p6b"; */
"Kad-e9-p6b.text" = "Today's Mood";

/* Class = "UILabel"; text = "Thu"; ObjectID = "Kf5-Pn-ckV"; */
"Kf5-Pn-ckV.text" = "Thu";

/* Class = "UILabel"; text = "We recommend that you set your daily goal to be at least 2 servings"; ObjectID = "Kpm-uv-dGn"; */
"Kpm-uv-dGn.text" = "We recommend that your goal be at least 2 servings";

/* Class = "UILabel"; text = "Today's Vegetables"; ObjectID = "L0C-l6-vfn"; */
...
/* Class = "UIButton"; normalTitle = "Save"; ObjectID = "MVi-QE-pL3"; */
"MVi-QE-pL3.normalTitle" = "Save";

/* Class = "UILabel"; text = "How many servings of vegetables have your eaten today?"; ObjectID = "MZJ-mn-8Sy"; */
"MZJ-mn-8Sy.text" = "How many servings of vegetables have you eaten today?";

/* Class = "UILabel"; text = "Sat"; ObjectID = "Mho-LY-gqB"; */
"Mho-LY-gqB.text" = "Sat";

/* Class = "UILabel"; text = "Your daily goal is 8 glasses"; ObjectID = "NQi-Ya-38M"; */
"NQi-Ya-38M.text" = "Your daily goal is 8 glasses";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "O1b-t5-rba"; */
...
/* Class = "UIButton"; normalTitle = "UP"; ObjectID = "PJ5-So-Vrx"; */
"PJ5-So-Vrx.normalTitle" = "UP";

/* Class = "UILabel"; text = "Steps"; ObjectID = "RaJ-LS-wN8"; */
"RaJ-LS-wN8.text" = "Steps";

/* Class = "UILabel"; text = "Start of Week"; ObjectID = "RtZ-td-4XK"; */
"RtZ-td-4XK.text" = "Start of Week";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "S7s-yd-zHL"; */
"S7s-yd-zHL.normalTitle" = "Cancel";

/* Class = "UIButton"; normalTitle = "23"; ObjectID = "TRx-j9-Eph"; */
...
/* Class = "UIButton"; normalTitle = "V"; ObjectID = "V1Y-j6-9oQ"; */
"V1Y-j6-9oQ.normalTitle" = "V";

/* Class = "UIButton"; normalTitle = "22"; ObjectID = "VRN-vN-6Fh"; */
"VRN-vN-6Fh.normalTitle" = "22";

/* Class = "UILabel"; text = "Color Theme"; ObjectID = "VRm-6q-oIx"; */
"VRm-6q-oIx.text" = "Color Theme";

/* Class = "UILabel"; text = "Goal Fruit"; ObjectID = "WGk-qH-MH0"; */
"WGk-qH-MH0.text" = "Goal Fruit";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "Xbq-N0-EdJ"; */
...
"Ys1-OM-szV.text" = "Sleep";

/* Class = "UILabel"; text = "Fri"; ObjectID = "ZMQ-Tp-VpF"; */
"ZMQ-Tp-VpF.text" = "Fri";

/* Class = "UILabel"; text = "Language"; ObjectID = "ZUo-8D-ace"; */
"ZUo-8D-ace.text" = "Restore Settings";

/* Class = "UIButton"; normalTitle = "Save"; ObjectID = "Zmh-Qr-Rw9"; */
"Zmh-Qr-Rw9.normalTitle" = "Save";

/* Class = "UILabel"; text = "Your daily goal is 2 servings"; ObjectID = "Zo5-M2-7Cg"; */
"Zo5-M2-7Cg.text" = "Your daily goal is 2 servings";
...
/* Class = "UILabel"; text = "Fruit"; ObjectID = "abI-9h-plX"; */
"abI-9h-plX.text" = "Fruit";

/* Class = "UILabel"; text = "We recommend that you set your daily goal to be at least 8 glasses"; ObjectID = "b1H-Pa-gfw"; */
"b1H-Pa-gfw.text" = "We recommend that your goal be at least 8 glasses";

/* Class = "UILabel"; text = "Sun"; ObjectID = "bvl-sT-Tns"; */
"bvl-sT-Tns.text" = "Sun";

/* Class = "UILabel"; text = "How many servings of vegetables would you like to eat each day?"; ObjectID = "bzu-VI-ZtV"; */
"bzu-VI-ZtV.text" = "How many servings of vegetables would you like to eat each day?";

/* Class = "UIButton"; normalTitle = "Save"; ObjectID = "cDh-EN-sA1"; */
...
/* Class = "UIButton"; normalTitle = "V"; ObjectID = "e6L-wL-uLk"; */
"e6L-wL-uLk.normalTitle" = "V";

/* Class = "UILabel"; text = "Mood"; ObjectID = "eEw-Yu-xFM"; */
"eEw-Yu-xFM.text" = "Mood";

/* Class = "UIBarButtonItem"; title = "Settings"; ObjectID = "ejl-7J-BJf"; */
"ejl-7J-BJf.title" = "Settings";

/* Class = "UILabel"; text = "Tue"; ObjectID = "esU-bx-iHz"; */
"esU-bx-iHz.text" = "Tue";

/* Class = "UILabel"; text = "We recommend that you set your daily goal to be at least 3 servings"; ObjectID = "fXE-Zo-n3l"; */
"fXE-Zo-n3l.text" = "We recommend that your daily goal be at least 3 servings";

/* Class = "UILabel"; text = "Your daily goal is 3 servings"; ObjectID = "gIX-7C-uRc"; */
...
/* Class = "UILabel"; text = "100%"; ObjectID = "yGY-Gd-B13"; */
"yGY-Gd-B13.text" = "100%";

/* Class = "UILabel"; text = "How are you feeling today?"; ObjectID = "yIf-ES-el1"; */
"yIf-ES-el1.text" = "How are you feeling today?";

/* Class = "UIBarButtonItem"; title = "Calendar >"; ObjectID = "yJE-Tu-T5Q"; */
"yJE-Tu-T5Q.title" = "Calendar >";

/* Class = "UINavigationItem"; title = "My Healthy Track"; ObjectID = "yOp-o4-K21"; */
"yOp-o4-K21.title" = "My Healthy Track";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "yuu-bA-4J2"; */
"yuu-bA-4J2.normalTitle" = "Cancel";

/* Class = "UIButton"; normalTitle = "Button"; ObjectID = "zPz-LT-izx"; */
...
"g31-3B-pd0.text" = "Sunday";

"INF-yg-fAI.text" = "Monday";

"NgL-Nq-xIP.text" = "Tuesday";

"6jH-Ph-SAR.text" = "Wednesday";

"Se8-MB-Ze6.text" = "Thursday";

"lyl-nd-EcY.text" = "Friday";

"K06-AC-fPb.text" = "Saturday";

"bpd-FN-Vv8.text" = "Select the First Day of the Week:";

"L55-ad-MJh.text" = "Select Your Color Theme:";

"wfD-fV-fpR.text" = "The Blues";

"pTf-nB-vGG.text" = "Stone Cold";

"SKA-pI-2iB.text" = "All Natural";

