...
"Monday" = "Monday";
"Tuesday" = "Tuesday";
"Wednesday" = "Wednesday";
"Thursday" = "Thursday";
"Friday" = "Friday";
"Saturday" = "Saturday";
"Restore" = "Restore";
"Cancel" = "Cancel";
"Are you sure you want to restore settings?" = "Are you sure you want to restore settings?";
"Restore Settings" = "Restore Settings";

